<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCF5FD"
    tools:context=".signup">

    <ImageView
        android:id="@+id/loginsign"
        android:layout_width="357dp"
        android:layout_height="295dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/signup"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout6"
        android:layout_width="402dp"
        android:layout_height="392dp"
        android:layout_marginTop="45dp"
        android:background="#FDF6FE"
        android:backgroundTint="#FDF6FE"
        android:fadingEdge="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginsign">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/Name"
                android:layout_width="373dp"
                android:layout_height="52dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_bacground_green"
                android:ems="10"
                android:hint="@string/hntname"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="#919191"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextText4"
                android:layout_width="372dp"
                android:layout_height="57dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_bacground_green"
                android:ems="10"
                android:hint="@string/hntemail"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="#919191"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextText5"
                android:layout_width="372dp"
                android:layout_height="54dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_bacground_green"
                android:ems="10"
                android:hint="@string/hntpass"
                android:inputType="text"
                android:textAlignment="center"
                android:textColorHint="#919191"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextText6"
                android:layout_width="372dp"
                android:layout_height="58dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_bacground_green"
                android:ems="10"
                android:hint="@string/hntrepass"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="#919191"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnlogin"
                android:layout_width="375dp"
                android:layout_height="71dp"
                android:layout_marginLeft="20dp"
                android:backgroundTint="#1DB7AE"
                android:text="@string/btnSignup"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="82dp"
        android:layout_height="32dp"
        android:layout_marginStart="164dp"
        android:layout_marginEnd="165dp"
        android:text="@string/tvSignup"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginsign"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>