<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".location">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="173dp"
        android:background="@color/greenblue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="113dp"
            android:layout_height="144dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.906"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.551"
            app:srcCompat="@drawable/locationside" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="312dp"
            android:layout_height="64dp"
            android:layout_marginTop="60dp"
            android:layout_weight="1"
            android:text="@string/tvlocationtopic"
            android:textColor="#FFFFFF"
            android:textSize="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.161"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="845dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="413dp"
            android:layout_height="91dp"
            android:layout_marginTop="24dp"
            android:background="@color/lightgrey"
            android:paddingTop="30dp"
            android:text="@string/tvlocation"
            android:textAlignment="center"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <Button
            android:id="@+id/button3"
            android:layout_width="333dp"
            android:layout_height="64dp"
            android:layout_marginTop="155dp"
            android:backgroundTint="@color/lightblue"
            android:text="@string/btnsearchloc"
            android:textColor="@color/greenblue"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button6"
            android:layout_width="369dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/lightblue"
            android:text="@string/btnlocation1"
            android:textColor="@color/greenblue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <Button
            android:id="@+id/button16"
            android:layout_width="369dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/lightblue"
            android:text="@string/btnlocation2"
            android:textColor="@color/greenblue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button6" />

        <Button
            android:id="@+id/button17"
            android:layout_width="369dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/lightblue"
            android:text="@string/btnlocation3"
            android:textColor="@color/greenblue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button16" />

        <Button
            android:id="@+id/button18"
            android:layout_width="369dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/lightblue"
            android:text="@string/btnlocation4"
            android:textColor="@color/greenblue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button17" />

        <Button
            android:id="@+id/button19"
            android:layout_width="369dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/lightblue"
            android:text="@string/btnlocation5"
            android:textColor="@color/greenblue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button18" />

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="32dp"
            android:layout_height="34dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/button3"
            app:layout_constraintTop_toTopOf="@+id/button3"
            app:srcCompat="@drawable/baseline_location_on_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        app:backgroundTint="#BFB7B7"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>