<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:background="#FEFEFE"
    android:backgroundTint="#FEFEFE">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="406dp"
        android:layout_height="782dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/passwordlogin"
            android:layout_width="326dp"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bacground_green"
            android:ems="10"
            android:hint="@string/hntpass"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="#919191"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EditText"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/EditText"
            android:layout_width="326dp"
            android:layout_height="51dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/button_bacground_green"
            android:ems="10"
            android:hint="@string/hntemail"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="#919191"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/EditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:ignore="NotSibling" />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="330dp"
            android:layout_height="72dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#1DB7AE"
            android:text="@string/btnLogin"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordlogin" />

        <Button
            android:id="@+id/button2"
            android:layout_width="322dp"
            android:layout_height="68dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="#BFF5F2"
            android:text="@string/btnGoogleSign"
            android:textColor="#81A2A2"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="319dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/tv2"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="250dp"
            android:layout_height="36dp"
            android:layout_marginTop="22dp"
            android:text="@string/tvLogin"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="320dp"
            android:layout_height="226dp"
            android:layout_marginTop="92dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.472"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/login" />

        <ImageView
            android:id="@+id/imageView25"
            android:layout_width="36dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/button2"
            app:layout_constraintTop_toTopOf="@+id/button2"
            app:srcCompat="@drawable/google" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>